--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,13 @@
 name: image_picker_ios
+publish_to: none
 description: iOS implementation of the image_picker plugin.
 repository: https://github.com/flutter/packages/tree/main/packages/image_picker/image_picker_ios
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+image_picker%22
 version: 0.8.8+2
 
 environment:
-  sdk: ">=2.19.0 <4.0.0"
-  flutter: ">=3.7.0"
+  sdk: ">=3.1.0 <4.0.0"
+  flutter: ">=3.13.0"
 
 flutter:
   plugin:
@@ -19,13 +20,15 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  image_picker_platform_interface: ^2.8.0
+  image_picker_platform_interface: 
+    git: https://github.com/kumsumit/image_picker_platform_interface.git
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mockito: 5.4.1
-  pigeon: ^9.2.4
+  mockito: ^5.4.2
+  pigeon: 
+    git: https://github.com/kumsumit/pigeon.git
 
 topics:
   - camera
