--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,8 +3,8 @@ description: Demonstrates how to use the image_picker plugin.
 publish_to: none
 
 environment:
-  sdk: ">=2.19.0 <4.0.0"
-  flutter: ">=3.7.0"
+  sdk: ">=3.1.0 <4.0.0"
+  flutter: ">=3.13.0"
 
 dependencies:
   flutter:
@@ -16,9 +16,11 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../
-  image_picker_platform_interface: ^2.8.0
+  image_picker_platform_interface:
+    git: https://github.com/kumsumit/image_picker_platform_interface.git
   mime: ^1.0.4
-  video_player: ^2.1.4
+  video_player: 
+    git: https://github.com/kumsumit/video_player.git
 
 dev_dependencies:
   flutter_test:
