--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,13 +3,8 @@ description: Demonstrates how to use the image_picker plugin.
 publish_to: none
 
 environment:
-<<<<<<< HEAD
-  sdk: ">=3.1.0 <4.0.0"
-  flutter: ">=3.13.0"
-=======
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.10.0"
->>>>>>> refs/remotes/origin/main
+  sdk: ^3.3.1
+  flutter: ">=3.19.3"
 
 dependencies:
   flutter:
