--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ publish_to: none
 description: iOS implementation of the image_picker plugin.
 repository: https://github.com/flutter/packages/tree/main/packages/image_picker/image_picker_ios
 issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+label%3A%22p%3A+image_picker%22
-version: 0.8.9+2
+version: 0.8.12
 
 environment:
   sdk: ">=3.3.1 <4.0.0"
